--- a/v1/index.html
+++ b/v1/index.html
@@ -11,17 +11,18 @@
     <!-- Header -->
     <header>
         <img src="images/logo.png" class="logo" alt="Logo" onclick="window.location.reload();">
+        <span class="about-me-link" onclick="window.location.href='aboutme.html';">About Me</span>
     </header>
 
     <!-- Image Carousel Container -->
     <div class="carousel">
         <div class="carousel-track">
-            <img src="images/card1.jpg" class="carousel-item" id="image1">
-            <img src="images/card2.jpg" class="carousel-item" id="image2">
-            <img src="images/card3.jpg" class="carousel-item" id="image3">
-            <img src="images/card4.jpg" class="carousel-item" id="image4">
-            <img src="images/card5.jpg" class="carousel-item" id="image5">
-            <img src="images/card6.jpg" class="carousel-item" id="image6">
+            <img src="images/card1.jpg" class="carousel-item" id="image1" onclick="window.location.href='project1.html';">
+            <img src="images/card2.jpg" class="carousel-item" id="image2" onclick="window.location.href='project2.html';">
+            <img src="images/card3.jpg" class="carousel-item" id="image3" onclick="window.location.href='project3.html';">
+            <img src="images/card4.jpg" class="carousel-item" id="image4" onclick="window.location.href='project4.html';">
+            <img src="images/card5.jpg" class="carousel-item" id="image5" onclick="window.location.href='project5.html';">
+            <img src="images/card6.jpg" class="carousel-item" id="image6" onclick="window.location.href='project6.html';">
         </div>
     </div>
 
