changed overlay for Sonia from left

--- a/v3/index.html
+++ b/v3/index.html
@@ -12,9 +12,10 @@
             <span class="name">Sonia Wadhwani</span>
         </div>
         <div class="header-right">
-            <a href="aboutme.html" class="about-me">About Me</a>
+            <a  class="about-me" id="sonia1" onclick="showOverlay('overlaySonia')">About Me</a>
         </div>
     </header>
+    
     <main>
         <div class="card-stack">
             <img src="images/card1.jpg" class="card" id="card1" onclick="transitionCard(1)">
@@ -22,18 +23,77 @@
             <img src="images/card3.jpg" class="card" id="card3" onclick="transitionCard(3)">
             <img src="images/card4.jpg" class="card" id="card4" onclick="transitionCard(4)">
             <img src="images/card5.jpg" class="card" id="card5" onclick="transitionCard(5)">
-            <img src="images/card6.jpg" class="card" id="card6" onclick="transitionCard(6)">
-            <img src="images/sonia1.jpg" class="card" id="card6">
+            <img src="images/sonia1.jpg" class="card" id="sonia1" onclick="showOverlayRight('overlaySonia')">
         </div>
+
+        <img src="images/reset.png" class="arrow" alt="Arrow">
+
         <div class="transition-stack">
-            <img src="images/card1a.jpg" class="transition-card" id="card1a" style="display: none;">
-            <img src="images/card2a.jpg" class="transition-card" id="card2a" style="display: none;">
-            <img src="images/card3a.jpg" class="transition-card" id="card3a" style="display: none;">
-            <img src="images/card4a.jpg" class="transition-card" id="card4a" style="display: none;">
-            <img src="images/card5a.jpg" class="transition-card" id="card5a" style="display: none;">
-            <img src="images/card6a.jpg" class="transition-card" id="card6a" style="display: none;">
+            <img src="images/card1a.jpg" class="transition-card" id="card1a" style="display: none;" onclick="showOverlay('overlay1')">
+            <img src="images/card2a.jpg" class="transition-card" id="card2a" style="display: none;" onclick="showOverlay('overlay2')">
+            <img src="images/card3a.jpg" class="transition-card" id="card3a" style="display: none;" onclick="showOverlay('overlay3')">
+            <img src="images/card4a.jpg" class="transition-card" id="card4a" style="display: none;" onclick="showOverlay('overlay4')">
+            <img src="images/card5a.jpg" class="transition-card" id="card5a" style="display: none;" onclick="showOverlay('overlay5')">
         </div>
     </main>
+
+    <!-- Overlay Sections -->
+    <div id="overlay1" class="overlay">
+        <div class="overlay-content">
+            <span class="close-btn" onclick="closeOverlay('overlay1')">&times;</span>
+            <h2>Overlay 1 Content</h2>
+            <p>Sample text for Overlay 1.</p>
+        </div>
+    </div>
+
+    <div id="overlay2" class="overlay">
+        <div class="overlay-content">
+            <span class="close-btn" onclick="closeOverlay('overlay2')">&times;</span>
+            <h2>Overlay 2 Content</h2>
+            <p>Sample text for Overlay 2.</p>
+        </div>
+    </div>
+
+    <div id="overlay3" class="overlay">
+        <div class="overlay-content">
+            <span class="close-btn" onclick="closeOverlay('overlay3')">&times;</span>
+            <h2>Overlay 3 Content</h2>
+            <p>Sample text for Overlay 3.</p>
+        </div>
+    </div>
+
+    <div id="overlay4" class="overlay">
+        <div class="overlay-content">
+            <span class="close-btn" onclick="closeOverlay('overlay4')">&times;</span>
+            <h2>Overlay 4 Content</h2>
+            <p>Sample text for Overlay 4.</p>
+        </div>
+    </div>
+
+    <div id="overlay5" class="overlay">
+        <div class="overlay-content">
+            <span class="close-btn" onclick="closeOverlay('overlay5')">&times;</span>
+            <h2>Overlay 5 Content</h2>
+            <p>Sample text for Overlay 5.</p>
+        </div>
+    </div>
+
+    <div id="overlay6" class="overlay">
+        <div class="overlay-content">
+            <span class="close-btn" onclick="closeOverlay('overlay6')">&times;</span>
+            <h2>Overlay 6 Content</h2>
+            <p>Sample text for Overlay 6.</p>
+        </div>
+    </div>
+
+    <div id="overlaySonia" class="overlay-right">
+        <div class="overlay-content">
+            <span class="close-btn" onclick="closeOverlayRight('overlaySonia')">&times;</span>
+            <h2>Sonia's Special Overlay</h2>
+            <p>Sample text for Sonia's overlay.</p>
+        </div>
+    </div>
+
     <script src="script/script.js"></script>
 </body>
 </html>
