--- a/v3/index.html
+++ b/v3/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-left">
-            <span class="name">Sonia Wadhwani</span>
+            <a href="index.html" class="name">Sonia Wadhwani</a>
         </div>
         <div class="header-right">
             <a class="about-me" id="sonia1" onclick="showOverlayRight('overlaySonia')">About Me</a>
