submitted new images

--- a/v1/index.html
+++ b/v1/index.html
@@ -21,12 +21,12 @@
     <!-- Image Carousel Container -->
     <div class="carousel">
         <div class="carousel-track">
-            <img src="images/card1.jpg" class="carousel-item" id="image1" onclick="showOverlay('overlay1')">
-            <img src="images/card2.jpg" class="carousel-item" id="image2" onclick="showOverlay('overlay2')">
-            <img src="images/card3.jpg" class="carousel-item" id="image3" onclick="showOverlay('overlay3')">
-            <img src="images/card4.jpg" class="carousel-item" id="image4" onclick="showOverlay('overlay4')">
-            <img src="images/card5.jpg" class="carousel-item" id="image5" onclick="showOverlay('overlay5')">
-            <img src="images/card6.jpg" class="carousel-item" id="image6" onclick="showOverlay('overlay6')">
+            <img src="images/card1.png" class="carousel-item" id="image1" onclick="showOverlay('overlay1')">
+            <img src="images/card2.png" class="carousel-item" id="image2" onclick="showOverlay('overlay2')">
+            <img src="images/card3.png" class="carousel-item" id="image3" onclick="showOverlay('overlay3')">
+            <img src="images/card4.png" class="carousel-item" id="image4" onclick="showOverlay('overlay4')">
+            <img src="images/card5.png" class="carousel-item" id="image5" onclick="showOverlay('overlay5')">
+            <img src="images/card6.png" class="carousel-item" id="image6" onclick="showOverlay('overlay6')">
         </div>
     </div>
 
