changed movement fixes

--- a/v3/index.html
+++ b/v3/index.html
@@ -19,12 +19,12 @@
     <main>
         <div class="area-left">
             <div class="card-stack">
-                <img src="images/card1.jpg" class="card" id="card1" onclick="transitionCard(1)">
-                <img src="images/card2.jpg" class="card" id="card2" onclick="transitionCard(2)">
-                <img src="images/card3.jpg" class="card" id="card3" onclick="transitionCard(3)">
-                <img src="images/card4.jpg" class="card" id="card4" onclick="transitionCard(4)">
-                <img src="images/card5.jpg" class="card" id="card5" onclick="transitionCard(5)">
-                <img src="images/sonia1.jpg" class="card" id="sonia1" onclick="showOverlayRight('overlaySonia')">
+                <img src="images/card1.png" class="card" id="card1" onclick="transitionCard(1)">
+                <img src="images/card2.png" class="card" id="card2" onclick="transitionCard(2)">
+                <img src="images/card3.png" class="card" id="card3" onclick="transitionCard(3)">
+                <img src="images/card4.png" class="card" id="card4" onclick="transitionCard(4)">
+                <img src="images/card5.png" class="card" id="card5" onclick="transitionCard(5)">
+                <img src="images/sonia1.png" class="card" id="sonia1" onclick="showOverlayRight('overlaySonia')">
             </div>
         </div>
 
