--- a/v4/index.html
+++ b/v4/index.html
@@ -28,4 +28,4 @@
 
     <p>
         <a href="https://www.canva.com/design/DAGihvhqp_8/Q3NPj1LZBqGs-zk3cWrkwQ/view?utm_content=DAGihvhqp_8&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link"
-           target="_blank" rel="noopener">View on_
+           target="_blank" rel="noopener">View on canva_
