--- a/old/index.html
+++ b/old/index.html
@@ -79,7 +79,7 @@
         </section>
         <!-- Project section-->
         <section id="projects">
-            <h2>Projects</h2>
+            <h2>Projects</h2>xfff
             <div class="project-box">
                 <img src="images/projectscratch.png" alt="Scratch Project" class="project-image" id="project1">
                 <img src="images/projectp5js.png" alt="P5JS Project" class="project-image" id="project2">
