--- a/new/v5.html
+++ b/new/v5.html
@@ -1,66 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scrollable Rectangles</title>
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      overflow-y: scroll;
-      font-family: Arial, sans-serif;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Scrollable Rectangles</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Apply the Inter font and set a dark background */
+        body {
+            font-family: 'Inter', sans-serif;
+            background-color: #0d1117;
+            color: #ffffff;
+            overflow-x: hidden;
+        }
 
-    .container {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100vw;
-    }
+        /* Custom CSS to define the height of each card and the hover effect */
+        .card-section {
+            height: 25vh; /* This makes the rectangles smaller */
+            transition: transform 0.5s ease-in-out;
+            transform-origin: center center;
+        }
 
-    .rectangle {
-      width: 90vw;
-      height: calc(100vh / 2.5); /* Exactly 2.5 visible at once */
-      margin: 10px 0;
-      background: #888;
-      border-radius: 20px;
-      transition: transform 0.4s ease, height 0.4s ease;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 2rem;
-      color: white;
-      cursor: pointer;
-    }
-
-    .rectangle:nth-child(odd) {
-      background: #4a90e2;
-    }
-
-    .rectangle:nth-child(even) {
-      background: #e94a63;
-    }
-
-    /* Hover expansion */
-    .rectangle:hover {
-      transform: scale(1.05);
-    }
-  </style>
+        .card-section:hover {
+            transform: scale(1.05); /* Slightly scales the card up on hover */
+        }
+    </style>
 </head>
-<body>
-  <div class="container">
-    <div class="rectangle">Rectangle 1</div>
-    <div class="rectangle">Rectangle 2</div>
-    <div class="rectangle">Rectangle 3</div>
-    <div class="rectangle">Rectangle 4</div>
-    <div class="rectangle">Rectangle 5</div>
-    <div class="rectangle">Rectangle 6</div>
-  </div>
+<body class="overflow-y-scroll">
+    <!-- Header Section -->
+    <header class="text-center w-full py-16 px-4 sm:px-8 md:px-16 space-y-4">
+        <h1 class="text-5xl sm:text-6xl md:text-7xl font-extrabold text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-cyan-600">
+            Welcome to the Demo
+        </h1>
+        <p class="mt-4 text-base sm:text-lg md:text-xl text-gray-300 max-w-4xl mx-auto">
+            This is a simple example of a vertically scrolling page with interactive, expanding cards. Scroll down to see the content.
+        </p>
+    </header>
+    
+    <!-- Main Content Area with Rectangles -->
+    <div class="flex flex-col items-center py-8 px-4 sm:px-8 md:px-16 space-y-8">
+        <!-- First Rectangle -->
+        <div class="card-section w-full max-w-5xl bg-gradient-to-br from-blue-500 to-indigo-600 rounded-xl shadow-2xl p-8 flex items-center justify-center text-center">
+            <h2 class="text-3xl sm:text-4xl font-bold">Concept & Design</h2>
+        </div>
 
-  <script>
-    // Optional: Smooth scrolling effect on mousewheel
-    document.documentElement.style.scrollBehavior = "smooth";
-  </script>
+        <!-- Second Rectangle -->
+        <div class="card-section w-full max-w-5xl bg-gradient-to-br from-purple-500 to-pink-600 rounded-xl shadow-2xl p-8 flex items-center justify-center text-center">
+            <h2 class="text-3xl sm:text-4xl font-bold">Interactive Experience</h2>
+        </div>
+
+        <!-- Third Rectangle -->
+        <div class="card-section w-full max-w-5xl bg-gradient-to-br from-teal-500 to-cyan-600 rounded-xl shadow-2xl p-8 flex items-center justify-center text-center">
+            <h2 class="text-3xl sm:text-4xl font-bold">Responsive Development</h2>
+        </div>
+
+        <!-- Fourth Rectangle -->
+        <div class="card-section w-full max-w-5xl bg-gradient-to-br from-yellow-500 to-orange-600 rounded-xl shadow-2xl p-8 flex items-center justify-center text-center">
+            <h2 class="text-3xl sm:text-4xl font-bold">Modern Web Standards</h2>
+        </div>
+
+        <!-- Fifth Rectangle -->
+        <div class="card-section w-full max-w-5xl bg-gradient-to-br from-red-500 to-pink-500 rounded-xl shadow-2xl p-8 flex items-center justify-center text-center">
+            <h2 class="text-3xl sm:text-4xl font-bold">Clean Code Philosophy</h2>
+        </div>
+
+        <!-- Sixth Rectangle -->
+        <div class="card-section w-full max-w-5xl bg-gradient-to-br from-green-500 to-blue-500 rounded-xl shadow-2xl p-8 flex items-center justify-center text-center">
+            <h2 class="text-3xl sm:text-4xl font-bold">User-Centric Approach</h2>
+        </div>
+    </div>
 </body>
 </html>
