--- a/v5/index.html
+++ b/v5/index.html
@@ -26,19 +26,17 @@
             preserveAspectRatio="xMidYMid meet" 
             xmlns="http://www.w3.org/2000/svg"
         >
-            <path 
-                class="draw-path" 
-                d="M500,500 
-                   C550,450 600,550 650,500 
-                   S750,400 700,300 
-                   S500,200 400,300 
-                   S200,500 300,600 
-                   S500,800 600,700
-                   S800,500 700,400" 
-                fill="none" 
-                stroke="black" 
-                stroke-width="1.5"
-            />
+            <path class="draw-path" d="M500,150 C600,150 750,250 800,400 C850,550 750,700 650,800 C550,900 400,850 300,750 C200,650 150,500 200,350 C250,200 400,150 500,150 Z" fill="none" stroke="#333" stroke-width="1" opacity="0.4" />
+            <path class="draw-path" d="M500,180 C580,180 720,270 760,400 C800,530 720,680 630,760 C540,840 420,810 330,720 C240,630 200,500 240,380 C280,260 420,180 500,180 Z" fill="none" stroke="#333" stroke-width="1" opacity="0.5" />
+            <path class="draw-path" d="M500,210 C560,210 690,290 720,400 C750,510 690,650 600,720 C510,790 410,770 330,690 C250,610 220,500 250,400 C280,300 440,210 500,210 Z" fill="none" stroke="#333" stroke-width="1" opacity="0.6" />
+            
+            <path class="draw-path" d="M500,250 C550,250 650,320 680,420 C710,520 650,620 580,680 C510,740 420,720 350,650 C280,580 260,480 290,400 C320,320 450,250 500,250 Z" fill="none" stroke="#333" stroke-width="1.2" opacity="0.7" />
+            <path class="draw-path" d="M480,300 C530,280 620,350 640,450 C660,550 600,630 520,670 C440,710 360,680 320,600 C280,520 300,400 350,350 C400,300 430,320 480,300 Z" fill="none" stroke="#333" stroke-width="1.2" opacity="0.8" />
+            
+            <path class="draw-path" d="M500,350 C550,330 600,400 610,500 C620,600 550,650 480,650 C410,650 350,580 360,480 C370,380 450,370 500,350 Z" fill="none" stroke="#333" stroke-width="1.3" />
+            <path class="draw-path" d="M490,400 C530,390 570,450 575,500 C580,550 530,600 480,610 C430,620 390,560 395,510 C400,460 450,410 490,400 Z" fill="none" stroke="#333" stroke-width="1.4" />
+            <path class="draw-path" d="M510,450 C540,440 560,480 550,520 C540,560 500,580 470,570 C440,560 420,520 430,480 C440,440 480,460 510,450 Z" fill="none" stroke="#333" stroke-width="1.5" />
+             <path class="draw-path" d="M500,490 C515,490 525,505 520,520 C515,535 500,540 485,530 C470,520 475,500 485,495 C495,490 500,490 500,490 Z" fill="none" stroke="#333" stroke-width="1.5" />
         </svg>
     </main>
 
