--- a/v6/index.html
+++ b/v6/index.html
@@ -15,7 +15,7 @@
     <main>
         <div class="contour-container">
             <svg id="contour-art" viewBox="0 0 800 800" xmlns="http://www.w3.org/2000/svg">
-                <g id="contour-lines">
+                <g id="contour-lines" fill="none" stroke="#000" stroke-width="1">
                     <path d="M400,200 Q450,220 480,260 T520,340 Q530,380 520,420 T480,500 Q450,540 400,560 T320,540 Q280,520 260,480 T240,400 Q240,360 260,320 T320,260 Q350,220 400,200 Z"/>
                     <path d="M400,220 Q440,235 465,270 T500,340 Q508,375 500,410 T465,475 Q440,505 400,520 T335,505 Q300,490 280,465 T260,400 Q260,370 280,345 T335,295 Q360,235 400,220 Z"/>
                     <path d="M400,240 Q430,250 450,280 T480,340 Q486,370 480,400 T450,455 Q430,480 400,490 T350,480 Q320,470 305,450 T280,400 Q280,375 305,355 T350,315 Q370,250 400,240 Z"/>
