--- a/v7/index.html
+++ b/v7/index.html
@@ -13,22 +13,63 @@
   <!-- Name – top-left -->
   <h1>Sonia Wadhwani</h1>
 
-  <!-- Main visual: inline SVG with placeholder paths -->
-  <svg class="drawing" viewBox="0 0 1000 1000" preserveAspectRatio="xMidYMid meet">
-    <!-- 
-      Placeholder: we'll replace these with real contour-like paths soon.
-      For now this is just to have structure and test visibility/positioning.
-    -->
-    <g class="lines">
-      <!-- Example temporary path – a simple closed shape to see something -->
-      <path d="M 500,100 
-               Q 700,200 800,500 
-               Q 700,800 500,900 
-               Q 300,800 200,500 
-               Q 300,200 500,100 Z" 
-            fill="none" stroke="#444" stroke-width="1.2"/>
-      
-      <!-- We'll add more layered/offset paths here later for the topographic effect -->
+  <!-- Main visual: wide topographic contour lines – irregular, mountain-like -->
+  <svg class="drawing" viewBox="0 0 2000 800" preserveAspectRatio="xMidYMid meet">
+    <g class="lines" transform="translate(1000,400) scale(1.1)"> <!-- center origin for easier radial feel -->
+      <!-- Outermost contour – large irregular mountain range outline -->
+      <path class="contour outer"
+            d="M -900,0 
+               C -750,-120 -600,-80 -450,0 
+               C -300,100 -150,60 0,20 
+               C 150,-40 300,0 450,40 
+               C 600,120 750,80 900,0 
+               C 750,-100 600,-140 450,-80 
+               C 300,-20 150,20 0,-10 
+               C -150,-80 -300,-120 -450,-60 
+               C -600,-20 -750,40 -900,0 Z"
+            fill="none" stroke="#444" stroke-width="2.0" stroke-linecap="round"/>
+
+      <!-- Mid-outer layer – bumpy hills -->
+      <path class="contour"
+            d="M -700,10 
+               Q -550,-90 -400,20 
+               Q -250,110 -100,30 
+               Q 50,-30 200,50 
+               Q 350,130 500,40 
+               Q 650,-50 700,10 Z"
+            fill="none" stroke="#555" stroke-width="1.6" stroke-linecap="round"/>
+
+      <!-- Mid layer – tighter, more varied contours -->
+      <path class="contour"
+            d="M -500,30 
+               C -400,-50 -300,10 -200,40 
+               C -100,90 0,50 100,20 
+               C 200,-20 300,30 400,60 
+               C 500,110 600,70 500,30 Z"
+            fill="none" stroke="#666" stroke-width="1.3" stroke-linecap="round"/>
+
+      <!-- Inner mid – dense wiggles for peak detail -->
+      <path class="contour"
+            d="M -300,50 
+               Q -220,-30 -140,60 
+               Q -60,110 20,70 
+               Q 100,30 180,80 
+               Q 260,120 300,50 Z"
+            fill="none" stroke="#777" stroke-width="1.1" stroke-linecap="round"/>
+
+      <!-- Inner layer – small sharp contours near center -->
+      <path class="contour"
+            d="M -150,70 Q -80,20 0,80 Q 80,140 150,70 Z"
+            fill="none" stroke="#888" stroke-width="0.9" stroke-linecap="round"/>
+
+      <path class="contour"
+            d="M -80,90 Q -30,50 0,95 Q 30,140 80,90 Z"
+            fill="none" stroke="#999" stroke-width="0.8" stroke-linecap="round"/>
+
+      <!-- Central peak – tiny radiating/peak lines -->
+      <path class="contour"
+            d="M 0,100 Q 0,60 0,100 M 0,100 L -20,80 M 0,100 L 20,80"
+            fill="none" stroke="#aaa" stroke-width="0.7" stroke-linecap="round"/>
     </g>
   </svg>
 
