--- a/v6/index.html
+++ b/v6/index.html
@@ -234,11 +234,12 @@
         @media (max-width: 768px) {
             main {
                 justify-content: center;
-                padding: 0 0px;
+                padding: 0;
             }
             .contour-container {
                 width: 100%;
                 max-width: 350px;
+                margin: 0 auto;
             }
             header {
                 top: 40px;
